public class Player {

    Konto konto = new Konto();

    Die die1 = new Die();
    Die die2 = new Die();
}
